# elk-rs

./: .gitignore  .gitmodules  .rules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_FEATURES.md  Cargo.toml  DEVNOTE.md  HISTORY.md  LICENSE  NOTICE  README.md  RELEASE_CHECKLIST.md  RUST_QUALITY_PLAN.md  RUST_QUALITY_PLAN_V2.md  SECURITY.md  TESTING.md  VALIDATION.md  VERSIONING.md
plugins/org.eclipse.elk.alg.common/: Cargo.toml
plugins/org.eclipse.elk.alg.common/src/org/: mod.rs
plugins/org.eclipse.elk.alg.common/tests/: all.rs  inside_port_label_test.rs  issue_475_test.rs  network_simplex_test.rs  next_to_port_label_placement_test.rs  node_micro_layout_test.rs  nodespacing_test.rs  one_dimensional_compactor_test.rs  port_label_placement_variants_test.rs
plugins/org.eclipse.elk.alg.common/tests/all/: cellsystem_process_test.rs  inside_port_label_test.rs  issue_475_test.rs  mod.rs  network_simplex_test.rs  next_to_port_label_placement_test.rs  node_micro_layout_test.rs  one_dimensional_compactor_test.rs  port_label_placement_variants_test.rs  rectilinear_convex_hull_test.rs  two_bit_grid_test.rs
plugins/org.eclipse.elk.alg.graphviz.layouter/: Cargo.toml
plugins/org.eclipse.elk.alg.graphviz.layouter/tests/: graphviz_metadata_test.rs
plugins/org.eclipse.elk.alg.layered/: Cargo.toml
plugins/org.eclipse.elk.alg.layered/tests/: abstract_barycenter_port_distributor_test.rs  all_crossings_counter_test.rs  allow_non_flow_ports_to_switch_sides_test.rs  alternating_layer_unzipper_test.rs  barycenter_heuristic_test.rs  basic_consider_model_order_test.rs  basic_crossing_minimization_test.rs  basic_cycle_breaker_test.rs  basic_edge_router_test.rs  basic_layer_assignment_test.rs  basic_model_order_test.rs  basic_node_placement_test.rs  between_layer_edge_two_node_crossings_counter_test.rs  binary_indexed_tree_test.rs  breaking_point_processors_test.rs  comment_postprocessor_test.rs  comment_preprocessor_test.rs  common_nodespacing_external_resources_test.rs  common_port_label_external_sweep_test.rs  compaction.rs  compaction_test.rs  component_group_test.rs  components.rs  components_processor_realworld_probe_test.rs  compound_external_port_side_test.rs  concrete_sort_by_input_model_test.rs  constraints_postprocessor_test.rs  cross_min_util_test.rs  crossings_counter_test.rs  edge_and_layer_constraint_edge_reverser_test.rs  edge_section_identifier_parity_model_test.rs  elk_graph_importer_padding_test.rs  elkt_loader_test.rs  elkt_test_loader.rs  end_label_graph_properties_test.rs  end_label_sorter_test.rs  general.rs  greedy_port_distributor_test.rs  greedy_switch_processor_test.rs  hierarchical_edge_sections_test.rs  (+103 more)
plugins/org.eclipse.elk.alg.layered/tests/common/: elkt_test_loader.rs  mod.rs
plugins/org.eclipse.elk.alg.layered/tests/compaction/: compaction_test.rs  mod.rs
plugins/org.eclipse.elk.alg.layered/tests/components/: component_group_test.rs  components_processor_realworld_probe_test.rs  mod.rs
plugins/org.eclipse.elk.alg.layered/tests/general/: elkt_loader_test.rs  layered_metadata_test.rs  layered_spacing_test.rs  mod.rs  trace_recorder_test.rs  white_box_test.rs
plugins/org.eclipse.elk.alg.layered/tests/issues/: issue_143_and_318_test.rs  issue_316_test.rs  issue_405_2_test.rs  issue_405_test.rs  issue_425_test.rs  issue_433_test.rs  issue_444_test.rs  issue_445_test.rs  issue_447_test.rs  issue_455_test.rs  issue_463_test.rs  issue_471_test.rs  issue_476_test.rs  issue_502_test.rs  issue_515_test.rs  issue_541_test.rs  issue_546_test.rs  issue_548_test.rs  issue_552_test.rs  issue_587_test.rs  issue_596_test.rs  issue_603_test.rs  issue_608_test.rs  issue_628_test.rs  issue_665_test.rs  issue_680_test.rs  issue_682_test.rs  issue_700_test.rs  issue_701_test.rs  issue_726_test.rs  issue_734_test.rs  issue_870_test.rs  issue_871_test.rs  issue_905_test.rs  mod.rs
plugins/org.eclipse.elk.alg.layered/tests/models/: custom_cross_feature_integration_test.rs  ignore_edge_in_layer_integration_test.rs  in_layer_edge_routing_integration_test.rs  (+4 more)
plugins/org.eclipse.elk.alg.mrtree/: Cargo.toml
plugins/org.eclipse.elk.alg.mrtree/tests/: mrtree_graph_size_test.rs
plugins/org.eclipse.elk.alg.rectpacking/: Cargo.toml
plugins/org.eclipse.elk.alg.rectpacking/tests/: issue_583_test.rs  padding_test.rs  rectpacking_compaction_test.rs  rectpacking_metadata_test.rs
plugins/org.eclipse.elk.alg.topdownpacking/: Cargo.toml
plugins/org.eclipse.elk.alg.topdownpacking/tests/: port_placement_calculation_test.rs  topdown_layout_test.rs  topdown_packing_test.rs  topdownpacking_metadata_test.rs
plugins/org.eclipse.elk.core/: Cargo.toml
plugins/org.eclipse.elk.core/tests/: alg_test_util.rs  algorithm_assembler_test.rs  all.rs  basic_progress_monitor_test.rs  bezier_spline_test.rs  comment_attachment_test.rs  comment_matcher_filter_test.rs  compound_graph_element_visitor_test.rs  configurator_provider_test.rs  cubic_spline_interpolator_test.rs  deprecated_layout_option_replacer_test.rs  diagram_layout_engine_override_test.rs  elk_graph_adapters_test.rs  elk_graph_comment_provider_test.rs  elk_math_test.rs  elk_reflect_parity_test.rs  elk_reflect_test.rs  elk_util_test.rs  fixed_layout_provider_test.rs  graph_validator_test.rs  ignored_test.rs  individual_spacings_test.rs  issue_457_test.rs  issue_489_test.rs  kvector_chain_test.rs  label_management_options_test.rs  layout_algorithm_metadata_test.rs  layout_algorithm_resolver_test.rs  layout_configuration_manager_test.rs  layout_configurator_test.rs  layout_connectors_service_test.rs  layout_data_content_assist_test.rs  layout_mapping_test.rs  layout_option_parse_test.rs  layout_option_proxy_test.rs  layout_option_validator_test.rs  layout_processor_configuration_test.rs  monitored_operation_test.rs  perf_comment_attachment.rs  persistence_util_test.rs  (+6 more)
plugins/org.eclipse.elk.graph.json/: Cargo.toml
plugins/org.eclipse.elk.graph.json/tests/: edge_coords_test.rs  elk_graph_arena_test.rs  json_graph_tests.rs
plugins/org.eclipse.elk.napi/: Cargo.toml  package.json
plugins/org.eclipse.elk.napi/src/: lib.rs
(+3918 files in other folders)
