[package]
name = "org-eclipse-elk-alg-layered"
version = "0.1.0"
edition = "2021"
license = "EPL-2.0"

[dependencies]
org-eclipse-elk-alg-common = { path = "../org.eclipse.elk.alg.common" }
org-eclipse-elk-core = { path = "../org.eclipse.elk.core" }
org-eclipse-elk-graph = { path = "../org.eclipse.elk.graph" }
serde_json = "1.0"

[dev-dependencies]
org-eclipse-elk-alg-force = { path = "../org.eclipse.elk.alg.force" }
org-eclipse-elk-alg-rectpacking = { path = "../org.eclipse.elk.alg.rectpacking" }
