[package]
name = "org-eclipse-elk-alg-layered"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
org-eclipse-elk-alg-common = { path = "../org.eclipse.elk.alg.common" }
org-eclipse-elk-core = { path = "../org.eclipse.elk.core" }
org-eclipse-elk-graph = { path = "../org.eclipse.elk.graph" }
rustc-hash = "2"
serde_json = "1.0"

[dev-dependencies]
org-eclipse-elk-alg-force = { path = "../org.eclipse.elk.alg.force" }
org-eclipse-elk-alg-rectpacking = { path = "../org.eclipse.elk.alg.rectpacking" }
