[package]
name = "org-eclipse-elk-alg-mrtree"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
org-eclipse-elk-core = { path = "../org.eclipse.elk.core" }
org-eclipse-elk-graph = { path = "../org.eclipse.elk.graph" }
org-eclipse-elk-alg-common = { path = "../org.eclipse.elk.alg.common" }
