[package]
name = "org-eclipse-elk-alg-topdownpacking"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
org-eclipse-elk-core = { path = "../org.eclipse.elk.core" }
org-eclipse-elk-graph = { path = "../org.eclipse.elk.graph" }

[dev-dependencies]
org-eclipse-elk-alg-layered = { path = "../org.eclipse.elk.alg.layered" }
