[package]
name = "org-eclipse-elk-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
org-eclipse-elk-graph = { path = "../org.eclipse.elk.graph" }

[dev-dependencies]
org-eclipse-elk-alg-disco = { path = "../org.eclipse.elk.alg.disco" }
org-eclipse-elk-alg-force = { path = "../org.eclipse.elk.alg.force" }
org-eclipse-elk-alg-layered = { path = "../org.eclipse.elk.alg.layered" }
org-eclipse-elk-alg-mrtree = { path = "../org.eclipse.elk.alg.mrtree" }
org-eclipse-elk-alg-radial = { path = "../org.eclipse.elk.alg.radial" }
org-eclipse-elk-alg-rectpacking = { path = "../org.eclipse.elk.alg.rectpacking" }
org-eclipse-elk-alg-spore = { path = "../org.eclipse.elk.alg.spore" }
