[package]
name = "org-eclipse-elk-graph-json"
version = "0.1.0"
edition = "2021"
license = "EPL-2.0"

[dependencies]
org-eclipse-elk-graph = { path = "../org.eclipse.elk.graph" }
org-eclipse-elk-core = { path = "../org.eclipse.elk.core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
