[package]
name = "org-eclipse-elk-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
org-eclipse-elk-graph-json = { path = "../org.eclipse.elk.graph.json" }

[build-dependencies]
napi-build = "2"
